--- a/views/admin/section/showSection.ejs
+++ b/views/admin/section/showSection.ejs
@@ -4,7 +4,10 @@
         <form method="get" action="/admin/section/<%= id %>/add-student">
             <button class="btn btn-primary mb-3">New Student</button>
         </form>
-
+        <form method="get" action="/admin/section/<%= id %>/batches">
+            <button class="btn btn-primary mb-3">view and create Batch</button>
+        </form>
+        
         <div class="course-name">
             <table class="table table-bordered">
                 <thead>
