--- a/views/admin/academicYears/edit.ejs
+++ b/views/admin/academicYears/edit.ejs
@@ -1,9 +1,13 @@
 <% layout("../layouts/adminBoilerplate") -%>
 <body>
-<h1>Edit Academic Year</h1>
-<form action="/admin/academic-years/<%= academicYear._id %>?_method=PUT" method="POST">
-  <label for="name">Academic Year Name:</label>
-  <input type="text" name="name" id="name" value="<%= academicYear.name %>" required>
-  <button type="submit">Update Academic Year</button>
-</form>
+    <div class="container mt-5">
+        <h1 class="mb-4">Edit Academic Year</h1>
+        <form action="/admin/academic-years/<%= academicYear._id %>?_method=PUT" method="POST">
+            <div class="form-group">
+                <label for="name">Academic Year Name:</label>
+                <input type="text" name="name" id="name" class="form-control" value="<%= academicYear.name %>" required>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Update Academic Year</button>
+        </form>
+    </div>
 </body>
