--- a/views/admin/branches/index.ejs
+++ b/views/admin/branches/index.ejs
@@ -1,16 +1,23 @@
 <% layout("../layouts/adminBoilerplate") -%>
 <body>
-<h1>Branches</h1>
-<a href="/admin/branches/new">Create New Branch</a>
-<ul>
-  <% branches.forEach(branch => { %>
-    <li>
-      <%= branch.name %> (<%= branch.academicYear.name %>)
-      <a href="/admin/branches/<%= branch._id %>/edit">Edit</a>
-      <form action="/admin/branches/<%= branch._id %>?_method=DELETE" method="POST">
-        <button type="submit">Delete</button>
-      </form>
-    </li>
-  <% }) %>
-</ul>
+    <div class="container mt-5">
+        <h1 class="mb-4">Branches</h1>
+        <a href="/admin/branches/new" class="btn btn-success mb-3">Create New Branch</a>
+        <ul class="list-group">
+            <% branches.forEach(branch => { %>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <div>
+                        <h5><%= branch.name %></h5>
+                        <p>Academic Year: <%= branch.academicYear.name %></p>
+                    </div>
+                    <div>
+                        <a href="/admin/branches/<%= branch._id %>/edit" class="btn btn-info btn-sm mr-2">Edit</a>
+                        <form action="/admin/branches/<%= branch._id %>?_method=DELETE" method="POST" class="d-inline">
+                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                        </form>
+                    </div>
+                </li>
+            <% }) %>
+        </ul>
+    </div>
 </body>
