--- a/views/admin/semesters/edit.ejs
+++ b/views/admin/semesters/edit.ejs
@@ -1,9 +1,13 @@
 <% layout("../layouts/adminBoilerplate") -%>
 <body>
-<h1>Create New Semester</h1>
-<form action="/admin/semesters" method="POST">
-  <label for="name">Semester Name:</label>
-  <input type="text" name="name" id="name" required>
-  <button type="submit">Create Semester</button>
-</form>
+    <div class="container mt-5">
+        <h1 class="mb-4">Edit Semester</h1>
+        <form action="/admin/semesters/<%= semester._id %>?_method=PUT" method="POST">
+            <div class="form-group">
+                <label for="name">Semester Name:</label>
+                <input type="text" name="name" id="name" class="form-control" value="<%= semester.name %>" required>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Update Semester</button>
+        </form>
+    </div>
 </body>
