--- a/views/faculty/attendance.ejs
+++ b/views/faculty/attendance.ejs
@@ -52,8 +52,24 @@
                         <option value="">Select Section</option>
                     </select>
                 </div>
+                <div class="col">
+                    <label for="subject">Subject:</label>
+                    <select id="subject" name="subject" class="form-control" required disabled>
+                        <option value="">Select Subject</option>
+                    </select>
+                </div>
+            <div>
+            <input type="checkbox" class="form-check-input" id="includeBatches">
+            <label class="form-check-label" for="includeBatches">Include Batches</label>
+        </div>
+        </div>
+        <div class ="row">
+            <div class="col-2">
+                <select id="batch" name="batch" class="form-control" required disabled>
+                    <option value="">Select Batch</option>
+                </select>
             </div>
-
+        </div>
             <section id="timetableSection" style="display: none;">
                 <h2>Today's Timetable</h2>
                 <table class="timetable table">
@@ -93,7 +109,7 @@
             $('#newRecord, #modifyRecord, #showRecord').click(function() {
                 $('#attendanceForm').show();
                 $('#attendanceForm').attr('action', $(this).data('action'));
-
+                $('#newRecord, #modifyRecord, #showRecord').attr('disabled', 'disabled');
                 if ($(this).data('action') === '/faculty/modifyAttendance') {
                     $('#attendanceForm').append('<input type="hidden" name="facultyId" value="<%= currUser._id %>">');
                 } else {
@@ -102,70 +118,106 @@
             });
 
             function fetchTimetable() {
-                var section = $('#section').val();
-                var date = $('#date').val();
-                var acYear = $('#acYear').val();
-                var program = $('#program').val();
-                var branch = $('#branch').val();
-                var sem = $('#sem').val();
-                var action = $('#attendanceForm').attr('action');
-                var facultyId = $('input[name="facultyId"]').val();
+            var section = $('#section').val();
+        var date = $('#date').val();
+        var acYear = $('#acYear').val();
+        var program = $('#program').val();
+        var branch = $('#branch').val();
+        var sem = $('#sem').val();
+        var action = $('#attendanceForm').attr('action');
+        var facultyId = $('input[name="facultyId"]').val();
+        var subject = $('#subject').val();
 
-                if (section && date && acYear && program && branch && sem) {
-                    console.log('Making AJAX request to fetch periods...');
-                    $.ajax({
-                        url: '/faculty/fetchPeriods',
-                        type: 'GET',
-                        data: { section: section, date: date, acYear: acYear, program: program, branch: branch, sem: sem, action: action.split('/').pop(), facultyId: facultyId },
-                        success: function(data) {
-                            console.log('Received periods data:', data);
-                            $('#timetableSection').show();
-                            for (let i = 1; i <= 7; i++) {
-                                let period = data.periods.find(p => p.hour === i);
-                                let periodCell = $(`#period-${i}`);
-                                let checkbox = $(`input[name="periods"][value="${i}"]`);
-                                if (period) {
-                                    let periodHtml = `<div>${period.subject.name}</div>
-                                                      <div>${period.branch.name}</div>
-                                                      <div>${period.year.name} SEM</div>
-                                                      <div>Sec: ${period.section.name}</div>
-                                                      <div>${period.startTime} - ${period.endTime}</div>`;
-                                    periodCell.html(periodHtml);
-                                    periodCell.removeClass('attendance-not-entered attendance-mismatch attendance-entered class-cancelled');
-                                    // Add hidden input for subject
-                                    periodCell.append(`<input type="hidden" name="subjects[${i}]" value="${period.subject._id}">`);
-                                } else {
-                                    periodCell.html('');
-                                    periodCell.removeClass('attendance-not-entered attendance-mismatch attendance-entered class-cancelled');
-                                    checkbox.attr('disabled', 'disabled');
-                                }
-                                if(action.split('/').pop() == 'markAttendance'){
-                                    if (data.enabledPeriods.includes(i)) {
-                                        periodCell.addClass('attendance-entered');
-                                        checkbox.attr('disabled', 'disabled');                                        
-                                    } else {
-                                        periodCell.addClass('attendance-not-entered');
-                                        checkbox.removeAttr('disabled');
-                                    }
-                                } else if(action.split('/').pop() == 'modifyAttendance'){
-                                    if (data.enabledPeriods.includes(i)) {
-                                        periodCell.addClass('attendance-entered');
-                                        checkbox.removeAttr('disabled');
-                                    } else {
-                                        periodCell.addClass('attendance-not-entered');
-                                        checkbox.attr('disabled', 'disabled');
-                                    }
-                                }
+        if (section && date && acYear && program && branch && sem && subject) {
+            console.log('Making AJAX request to fetch periods...');
+            $.ajax({
+                url: '/faculty/fetchPeriods',
+                type: 'GET',
+                data: {
+                    section: section,
+                    date: date,
+                    acYear: acYear,
+                    program: program,
+                    branch: branch,
+                    sem: sem,
+                    action: action.split('/').pop(),
+                    facultyId: facultyId,
+                    subject: subject
+                },
+                success: function(data) {
+                    console.log('Received periods data:', data);
+                    $('#timetableSection').show();
+
+                    for (let i = 1; i <= 7; i++) {
+                        let period = data.periods.find(p => p.hour === i);
+                        let periodCell = $(`#period-${i}`);
+                        let checkbox = $(`input[name="periods"][value="${i}"]`);
+                        periodCell.html(''); // Clear the cell
+
+                        if (period) {
+                            let periodHtml = `<div>${period.subject.name}</div>
+                                              <div>${period.branch.name}</div>
+                                              <div>${period.year.name} SEM</div>
+                                              <div>Sec: ${period.section.name}</div>
+                                              <div>${period.startTime} - ${period.endTime}</div>`;
+
+                            // If the period has batch details, display them
+                            if (period.batch) {
+                                periodHtml += `<div>Batch: ${period.batch.name}</div>`;
                             }
-                        },
-                        error: function(err) {
-                            console.error('Error fetching periods:', err);
+
+                            periodCell.html(periodHtml);
+                            periodCell.removeClass('attendance-not-entered attendance-mismatch attendance-entered class-cancelled');
+
+                            // Add hidden input for the subject
+                            periodCell.append(`<input type="hidden" name="subjects[${i}]" value="${period.subject._id}">`);
+
+                            // Preselect the checkbox if the subject matches
+                            if (period.subject._id === subject) {
+                                checkbox.prop('checked', true);
+                            }
+
+                        } else {
+                            periodCell.html('');
+                            periodCell.removeClass('attendance-not-entered attendance-mismatch attendance-entered class-cancelled');
+                            checkbox.attr('disabled', 'disabled');
+                        }
+
+                        if (action.split('/').pop() == 'markAttendance') {
+                            if (data.enabledPeriods.includes(i)) {
+                                periodCell.addClass('attendance-entered');
+                                checkbox.attr('disabled', 'disabled');
+                            } else {
+                                periodCell.addClass('attendance-not-entered');
+                                checkbox.removeAttr('disabled');
+                            }
+                        } else if (action.split('/').pop() == 'modifyAttendance') {
+                            if (data.enabledPeriods.includes(i)) {
+                                periodCell.addClass('attendance-entered');
+                                checkbox.removeAttr('disabled');
+                            } else {
+                                periodCell.addClass('attendance-not-entered');
+                                checkbox.attr('disabled', 'disabled');
+                            }
+                        }
+                    }
+
+                    // Handle batch selection based on section
+                    $('#includeBatches').change(function() {
+                        if ($(this).is(':checked')) {
+                            $('#batch').removeAttr('disabled').html('<option value="">Select Batch</option>' + data.batches.map(batch => `<option value="${batch._id}">${batch.name}</option>`));
+                        } else {
+                            $('#batch').attr('disabled', 'disabled').html('<option value="">Select Batch</option>');
                         }
                     });
+                },
+                error: function(err) {
+                    console.error('Error fetching periods:', err);
                 }
-            }
-
-            $('#acYear, #branch, #sem, #section, #date').change(fetchTimetable);
+            });
+        }
+    }   
+            $('#acYear, #branch, #sem, #section, #date, #subject').change(fetchTimetable);
 
             $('#acYear').change(function() {
                 var acYear = $(this).val();
@@ -197,8 +249,21 @@
                     });
                 }
             });
+            $('#section').change(function(){
+                var section = $('#section').val();
+                if (section) {
+                    $.ajax({
+                        url: '/faculty/subject',
+                        type: 'GET',
+                        data: {},
+                        success: function(data) {
+                            $('#subject').removeAttr('disabled').html('<option value="">Select Subject</option>' + data.map(subject => `<option value="${subject._id}">${subject.name}</option>`));
+                        }
+                    });
+                }
+            })
 
-            $('#section').change(fetchTimetable);
+            $('#subject').change(fetchTimetable);
 
             // Add this to handle form submission and include only checked periods
             $('#attendanceForm').submit(function(event) {
