--- a/views/faculty/markAttendance.ejs
+++ b/views/faculty/markAttendance.ejs
@@ -13,9 +13,14 @@
             <input type="hidden" name="branch" value="<%= branch %>">
             <input type="hidden" name="sem" value="<%= sem %>">
             <input type="hidden" name="subject" value="<%= subject %>">
+            <input type="hidden" name="batch" value="<%= selectedBatch %>">
             <% periods.forEach(period => { %>
                 <input type="hidden" name="periods[]" value="<%= period %>">
             <% }); %>
+            <% students.forEach(student => { %>
+                <input type="hidden" name="students[]" value="<%= student._id %>">
+            <% }); %>
+
             <h3>Student Attendance</h3>
             <table class="table table-striped">
                 <thead>
@@ -33,7 +38,7 @@
                             <td><%= index + 1 %></td>
                             <td><%= student.username %></td>
                             <td><%= student.name %></td>
-                            <td><%= student.section.name %></td>
+                            <td><%= student.section %> / <%= student.batch ? student.batch : '' %></td>
                             <td>
                                 <input type="checkbox" name="attendance[<%= student._id %>]" value="true" checked>
                             </td>
