--- a/views/admin/attendance/attendance.ejs
+++ b/views/admin/attendance/attendance.ejs
@@ -66,7 +66,7 @@
         </tr>
       </thead>
       <tbody>
-        <% attendances.forEach(attendance => { %>
+        <!-- <% attendances.forEach(attendance => { %>
           <tr>
             <td><%= attendance.student.name %></td>
             <td><%= attendance.subject.name %></td>
@@ -78,7 +78,7 @@
             <td><%= attendance.semester.name %></td>
             <td><%= attendance.year.name %></td>
           </tr>
-        <% }) %>
+        <% }) %> -->
       </tbody>
     </table>
   </div>
